# src/db/models/contact.js
@@ -1,41 +1,0 @@
-// src/db/models/student.js
-
-import { model, Schema } from 'mongoose';
-
-const contactsSchema = new Schema(
-  {
-    name: {
-      type: String,
-      required: true,
-    },
-    phoneNumber: {
-      type: String,
-      required: true,
-    },
-    email: {
-      type: String,
-    },
-    isFavourite: {
-      type: Boolean,
-      default: false,
-    },
-
-    contactType: {
-      type: String,
-      required: true,
-      enum: ['work', 'home', 'personal'],
-      default: 'personal',
-    },
-    userId: {
-      type: Schema.Types.ObjectId,
-      ref: 'users',
-    },
-    photo: { type: String },
-  },
-  {
-    timestamps: true,
-    versionKey: false,
-  },
-);
-
-export const ContactsCollection = model('contacts', contactsSchema);
