# src/routers/contacts.js
@@ -1,60 +1,0 @@
-import { Router } from 'express';
-import {
-  getContactsController,
-  getContactByIdController,
-  createContactController,
-  deleteContactController,
-  upsertContactController,
-  patchContactController,
-} from '../controllers/contacts.js';
-import { ctrlWrapper } from '../utils/ctrlWrapper.js';
-import { validateBody } from '../middlewares/validateBody.js';
-import {
-  createContactSchema,
-  updateContactSchema,
-} from '../validation/contacts.js';
-import { isValidId } from '../middlewares/isValidId.js';
-import { authenticate } from '../middlewares/authenticate.js';
-import { upload } from '../middlewares/multer.js';
-
-const contactsRouter = Router();
-
-contactsRouter.use(authenticate);
-
-contactsRouter.get('/', ctrlWrapper(getContactsController));
-
-contactsRouter.get(
-  '/:contactId',
-  isValidId,
-  ctrlWrapper(getContactByIdController),
-);
-
-contactsRouter.post(
-  '/',
-  upload.single('photo'),
-  validateBody(createContactSchema),
-  ctrlWrapper(createContactController),
-);
-
-contactsRouter.delete(
-  '/:contactId',
-  isValidId,
-  ctrlWrapper(deleteContactController),
-);
-
-contactsRouter.put(
-  '/:contactId',
-  isValidId,
-  validateBody(createContactSchema),
-  ctrlWrapper(upsertContactController),
-);
-
-contactsRouter.patch(
-  '/:contactId',
-  isValidId,
-  upload.single('photo'),
-  validateBody(updateContactSchema),
-  ctrlWrapper(patchContactController),
-);
-
-export default contactsRouter;
