# src/routers/index.js
@@ -1,10 +1,12 @@
 import { Router } from 'express';
-import contactsRouter from './contacts.js';
 import authRouter from './auth.js';
+import hotelsRouter from './hotels.js';
+import bookingsRouter from './bookings.js';
 
 const router = Router();
 
-router.use('/contacts', contactsRouter);
 router.use('/auth', authRouter);
+router.use('/hotels', hotelsRouter);
+router.use('/bookings', bookingsRouter);
 
 export default router;
